2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Modify the stock GCC to better support C99's VLA's.

	The stock GNU compiler needs to juggle around the stack pointer
	when using large frames. When restoring the frame pointer on exit,
	it needs a temporary register. However at this point it does not
	honor `-ffixed', so a "forbidden" register could get used. This
	changeset prevents this by using the AT register instead.
	
	* deploy/patches/gcc.patch: Extend changes to `alpha.c'.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update installer version to suggest upgrading.

	* deploy/installer/build-aux/package-version: Bump to 2.4.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Change installer defaults to the new ABI.

	* deploy/installer/versions.m4: Bump versions numbers.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notice of files changed in 2010.	

	* bootstrap,
	* configure.ac,
	* Makefile.am,
	* deploy/installer/bootstrap: Add 2010 to copyright notice.

2010-04-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the deployment installer.

	* deploy/installer/Makefile.am,
	* deploy/installer/rules/mgsim.mk: Use `slreqs-$(SLNAME)' as base
	prefix for requirement, so that different toolchain versions can
	have different default prerequisites.

	* deploy/installer/slenv: Environment variables to force
	requirement paths end with `_OVERRIDE'. Use them.

2010-02-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the package build process for MGSim.

	* deploy/dist/mgsim-dist.mk: Only build the targets necessary for
	man page generation.

2010-01-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Clean up version handling in installer.

	This changeset makes the installer itself versioned, so that `make
	dist' can generate different installer archives over time. Also,
	it allows the user to select custom versions for the installed
	tools using flags to `configure', instead of modifying a
	configuration files.
