@@ -1,7 +1,7 @@
-m4_define([def_binutils_ver], [1.18-3653-trunk])
+m4_define([def_binutils_ver], [1.18-3682-trunk])
 m4_define([def_mggcc_ver], [4.1.0-3361-mt-ra-shared-split])
-m4_define([def_mgsim_ver], [2.0.1-r3655])
-m4_define([def_slc_ver], [2.4])
-m4_define([def_gcc_ver], [4.4.3-3375])
+m4_define([def_mgsim_ver], [2.0.37-r3691])
+m4_define([def_slc_ver], [3.0])
+m4_define([def_gcc_ver], [4.4.3-3748])
 m4_define([def_m4_ver], [1.5.89a.154-7dc4-dirty])
 m4_define([def_sc_ver], [2.1.v1-3383])
